add: popup revision

--- a/interface/popup/switch.css
+++ b/interface/popup/switch.css
@@ -1,22 +1,29 @@
 /* From W3Schools */
 
 /* The switch - the box around the slider */
-.switch {
+  .switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
   }
+
+  .switch-small {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 17px;
+  }
   
   /* Hide default HTML checkbox */
-  .switch input {
+  .switch input, .switch-small input {
     opacity: 0;
     width: 0;
     height: 0;
   }
   
   /* The slider */
-  .slider {
+  .slider, .slider-small {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -27,7 +34,7 @@
     -webkit-transition: .4s;
     transition: .4s;
   }
-  
+
   .slider:before {
     position: absolute;
     content: "";
@@ -40,25 +47,45 @@
     transition: .4s;
   }
   
-  input:checked + .slider {
+  .slider-small:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    left: 2px;
+    top: 1px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider, input:checked + .slider-small {
     background-color: #2196F3;
   }
   
-  input:focus + .slider {
+  input:focus + .slider, input:focus + .slider-small {
     box-shadow: 0 0 1px #2196F3;
   }
-  
+
   input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
   }
   
+  input:checked + .slider-small:before {
+    -webkit-transform: translateX(22px);
+    -ms-transform: translateX(22px);
+    transform: translateX(22px);
+  }
+  
   /* Rounded sliders */
-  .slider.round {
+  .slider.round, .slider-small.round {
     border-radius: 34px;
   }
   
-  .slider.round:before {
+  .slider.round:before, .slider-small.round:before {
     border-radius: 50%;
   }
+
+  
